src/acid/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app-deployment-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-app-dev
  template:
    metadata:
      labels:
        app: portfolio-app-dev
    spec:
      containers:
        - name: portfolio-app
          image: portfolio-app:dev
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-app-service-dev
  namespace: dev
spec:
  type: NodePort
  selector:
    app: portfolio-app-dev
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 31500
