src/acid/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-app-ingress-dev
  namespace: dev
spec:
  rules:
    - host: portfolio-app-dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-app-service-dev
                port:
                  number: 8081
